[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.7"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_with = { version = "1.9.*", features = ["json"] }
uuid = { version = "0.8.*", features = ["serde", "v5"] }

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]
